# rust-c-ffi-guide

./: LICENSE  README.md
c_lib/: Makefile
c_lib/include/: demo_lib.h
c_lib/src/: demo_lib.c
rust_client/: Cargo.toml  build.rs
rust_client/examples/: naive.rs  naive_caller_owned.rs  safe.rs  safe_caller_owned.rs
